@@ -409,6 +409,7 @@ Nathan Owens (pianocomp81)
 John Oyler
 Matt Pandina
 Laszlo Pandy
+Paradox
 Giulio 'Twain28' Pascali
 Ricardo Fernandez Pascual
 Riley Patterson
