@@ -38,6 +38,7 @@ version 2.13.0 (??/??/????):
 	* Fix matching unicode smilies.  (#17232 gnubfx PR #262 Daniel Kamil Kozar)
 	* Correctly update mute/unmute status when the remote side mutes/unmutes us. (#17273 PR #302 David Woodhouse)
 	* Rework the status icon blinking to not used deprecated API.  (#17174 zelch PR #264 Daniel Kamil Kozar)
+	* Don't allow adding a buddy to protocols that don't have an add_buddy callback.  (#4061 Paradox)
 
 	Finch:
 	* Fix handling of search results (#17238 David Woodhouse)
